k8s/apps/miniflux/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: miniflux
  labels:
    goldilocks.fairwinds.com/enabled: "true"
