k8s/apps/miniflux/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: miniflux
spec:
  parentRefs:
    - name: shared
      namespace: default
  hostnames:
    - news.juliamertz.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: miniflux
          port: 8080
